--- a/_posts/2016-06-27-mathjax.md
+++ b/_posts/2016-06-27-mathjax.md
@@ -1,5 +1,5 @@
 ---
-title: "MathJax, Jekyll and github pages"
+title: "MathJax"
 categories:
   - computing
 tags:
@@ -9,7 +9,7 @@ use_math: true
 published: true
 ---
 
-Integrating MathJax with Jekyll is a very convenient way of typesetting mathematics in a blog hosted on github pages. There are a few guides online, which were (almost) helpful in acheiving this on a github hosted site. The steps, as of September 2016, are:
+<!-- Integrating MathJax with Jekyll is a very convenient way of typesetting mathematics in a blog hosted on github pages. There are a few guides online, which were (almost) helpful in acheiving this on a github hosted site. The steps, as of September 2016, are:
 
 Ensure the markdown engine is set to `kramdown` in `_config.yml`. This is now the [only supported markdown processor](https://help.github.com/articles/updating-your-markdown-processor-to-kramdown/) on github pages, so this should be set anyway.
 
@@ -88,4 +88,4 @@ CommonHTML: {
 * http://cwoebker.com/posts/latex-math-magic -- no longer seems to work
 * http://haixing-hu.github.io/programming/2013/09/20/how-to-use-mathjax-in-jekyll-generated-github-pages/
 * MathJax guide: http://docs.mathjax.org/en/latest/tex.html
-* MathJax details: http://docs.mathjax.org/en/latest/advanced/model.html
+* MathJax details: http://docs.mathjax.org/en/latest/advanced/model.html -->
