--- a/_posts/2024-08-30-SIH-2024.md
+++ b/_posts/2024-08-30-SIH-2024.md
@@ -9,9 +9,30 @@
 
 
 
-# Statement No.1751, Statement
+# Statement No.1622, Statement
 
-# Problem Statement Title:-
+# Problem Statement Title:- Online issuance of Caste and other certificates by Revenue Department need real-time monitoring
+
+0. The issuance of Caste and other certificates by Revenue Department need real-time monitoring to evaluate the resource allocation and demand for such certificates. The allocation of resources at present is done without any analysis leading to huge backlogs in some Sub-divison where the application load is very high. Any effective monitoring at District and Central level with detailed evaluation shall enable providing better allocation of resources for issuanc of such certificates
+
+
+
+# Statement No.1624, Statement
+
+# Problem Statement Title:- To develop an Artificial Intelligence (AI) based model for electricity demand projection including peak demand projection for Delhi Power system
+
+0. Background: The load profile of power requirement in NCT of Delhi is highly peculiar. We are witnessing huge load variations during the winter and summer months and also during day and night during the same 24-hour window. This causes imbalance in matching the requisite power purchase with the electricity demand. Description: The peak load in Delhi touched 8300 MW this summer while the minimum load during winters goes as low as 2000 MW. The peak during the summer months also occurs twice i.e. first during the day time at about 15:30 hrs and second time in night hours after 23:00 hrs. Further, the solar generation comes during the day time and wanes by the evening hours thereby lending a Duck-curve effect. Solar plants have been allowed +/- 15% variation by CERC. Further, there is uneven load growth in the city, the upcoming areas are witnessing huge load growth while the developed areas are having the lower organic load growth. In addition to that the load curve in Delhi is highly peaky in nature due to the fact that most of the load is domestic and commercial load while industrial load is minimal. Here it may be taken note that while in other States, industrial load which is 24 x 7 in nature lends stability to the overall load curve of the State. Further, in Delhi agricultural load is minimal. In bigger States, having considerable agricultural load, the supply on agricultural feeders is normally given when ample power is available at cheaper rates, especially during early morning hours/ night hours, which in -turn provides stability to the State' Transmission and Distribution network and also balances power purchase stipulation. Most of the Long Term power is available RTC (Round the Clock) and Slot-wise power is more expensive. Expected Solution: An Artificial Intelligence based model be developed with suitable compensation methodology to factor the weather effects (like temperature humidity, and wind speed, rains/showers), public holidays/ weekly holidays, natural load growth, and real estate development.
+
+
+
+
+# Statement No.1627, Statement
+
+# Problem Statement Title:- Drug Inventory and supply chain Tracking system
+
+0. With the aim to provide "Right Quantity of "Right Product" on "Right Place" on "Right Time" in "Right Condition" at "Right Cost" for "Right People" and also to streamline the distribution of drugs to institutions and ensure availability of drugs at all times, a new, innovative system named Drug Inventory and supply chain Tracking system is required: To improve efficiency and effectiveness of procurement and distribution systems through robust quality controls To provide dashboard based online monitoring of all activities at each level Tracking of vendor activities like preparation of Supply Order, Shipment etc. Monitoring of Drug consumption pattern at the Hospitals/Medical Institutions Level
+
+
 
 
 
