Decison trees added

--- a/_posts/2024-11-14-Trees.md
+++ b/_posts/2024-11-14-Trees.md
@@ -1,3 +1,16 @@
+---
+title: "Decision Tree Classifier for Play Tennis Dataset"
+categories:
+  - computing
+tags:
+  - mathjax
+  - jekyll
+use_math: true
+published: true
+---
+
+
+
 # Decision Tree Classifier for Play Tennis Dataset
 
 This project implements a Decision Tree Classifier to predict whether a game of tennis will be played based on weather conditions. The classifier uses the **ID3 (Iterative Dichotomiser 3)** algorithm to select the best attributes by calculating **Information Gain**.
