Decison trees added

--- a/_posts/2024-11-14-Trees.md
+++ b/_posts/2024-11-14-Trees.md
@@ -1,5 +1,5 @@
 ---
-title: "Decision Tree Classifier for Play Tennis Dataset"
+title: "Dataset"
 categories:
   - computing
 tags:
@@ -10,8 +10,6 @@ published: true
 ---
 
 
-
-# Decision Tree Classifier for Play Tennis Dataset
 
 This project implements a Decision Tree Classifier to predict whether a game of tennis will be played based on weather conditions. The classifier uses the **ID3 (Iterative Dichotomiser 3)** algorithm to select the best attributes by calculating **Information Gain**.
 
@@ -65,9 +63,9 @@ $
   - If `Outlook = Overcast`: Always `Yes`.
   - If `Outlook = Rain`: Further splits based on `Wind`.
 
-## How to Run the Project
+<!-- ## How to Run the Project
 
 1. Clone the repository:
    ```bash
    git clone https://github.com/your-username/decision-tree-classifier.git
-   cd decision-tree-classifier
+   cd decision-tree-classifier -->
